--- a/views/index.hbs
+++ b/views/index.hbs
@@ -21,24 +21,32 @@
 
 
 <section class="wcf-playerlist" id="wcf-playerlist">
+
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <div class="row">
-                    <div class="col-md-4">
-                        <div class="wcf-member">
-                            // for each player
-                            <p>testing</p>
-                            <p>testing</p>
-                            <p>testing</p>
-                            <p>testing</p>
-                            <p>testing</p>
-                            <p>testing</p>
+            <div class="wcf-member">
 
+                <div class="col-md-4 col-sm-12 col-xs-12">
+                    <div class="player-table">
+                        <div class="player-header">
+                            <p class="player-title">Zelin</p>
+                            <p class="player-rate">NO. 1</p>
+                        </div>
+
+                        <div class="player-info">
+                            <ul>
+                                <li><i class="fa fa-star"></i>1,000 scores</li>
+                                <li><i class="fa fa-archive"></i>Play 10 Rounds</li>
+                                <li><i class="fa fa-trophy"></i>Win 10 Rounds</li>
+                                <li><i class="fa fa-times"></i>Loss 0 Rounds</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
+
+
             </div>
         </div>
+
     </div>
 </section>
