--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,21 +24,22 @@
 
     <div class="container">
         <div class="row">
-            <div class="wcf-member">
+            <div class="wcfplayer">
 
-                <div class="col-md-4 col-sm-12 col-xs-12">
-                    <div class="player-table">
-                        <div class="player-header">
-                            <p class="player-title">Zelin</p>
-                            <p class="player-rate">NO. 1</p>
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="wcfplayer-table">
+                        <div class="wcfplayer-header">
+                            <img class="wcfplayer-avatar u-sm-size36x36" src="images/missing_face.png"/>
+                            <p class="wcfplayer-title">Zelin</p>
+                            <p class="wcfplayer-rate">NO. 1</p>
                         </div>
 
-                        <div class="player-info">
+                        <div class="wcfplayer-info">
                             <ul>
-                                <li><i class="fa fa-star"></i>1,000 scores</li>
-                                <li><i class="fa fa-archive"></i>Play 10 Rounds</li>
-                                <li><i class="fa fa-trophy"></i>Win 10 Rounds</li>
-                                <li><i class="fa fa-times"></i>Loss 0 Rounds</li>
+                                <li><i class="fa fa-star"></i><span>1,000</span> scores</li>
+                                <li><i class="fa fa-archive"></i>Play <span>10</span> Rounds</li>
+                                <li><i class="fa fa-trophy"></i>Win <span>10</span> Rounds</li>
+                                <li><i class="fa fa-times"></i>Loss <span>0</span> Rounds</li>
                             </ul>
                         </div>
                     </div>
