--- a/views/register.hbs
+++ b/views/register.hbs
@@ -7,12 +7,16 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/">{{site_title}}</a>
+            <a class="navbar-brand" href="/">{{title}}</a>
         </div>
 
         <div class="collapse navbar-collapse" id="navbar-main">
+            <ul class="nav navbar-nav">
+                <li><a href="/">Home</a></li>
+                <li><a href="/scoreboard">Scoreboard</a></li>
+            </ul>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="/register"><span class="fa fa fa-futbol-o"> Register</span></a></li>
+                <li><a href="/register"><span class="fa fa fa-futbol-o"> Join</span></a></li>
                 <li><a href="/login"><span class="fa fa-sign-in"> Login</span></a></li>
             </ul>
         </div>
@@ -20,28 +24,27 @@
 </nav>
 
 
-<form class="col-sm-offset-4 col-sm-4 bodycenter">
+<form class="col-sm-offset-4 col-sm-4 bodycenter" role="form" method="post">
     <fieldset>
         <legend>Create an account</legend>
         <div class="form-group">
             <label for="playername" class="control-label">Player Name</label>
-            <input type="text" class="form-control" id="playername" placeholder="Player name">
+            <input type="text" class="form-control" id="playername" placeholder="Player name" required>
         </div>
         <div class="form-group">
             <label for="playeremail" class="control-label">Email Address</label>
-            <input type="text" class="form-control" id="playeremail" placeholder="Email">
+            <input type="text" class="form-control" id="playeremail" placeholder="Email" required>
         </div>
         <div class="form-group">
             <label for="password" class="control-label">Password</label>
-            <input type="password" class="form-control" id="password" placeholder="Password">
+            <input type="password" class="form-control" id="password" placeholder="Password" required>
         </div>
         <div class="form-group">
             <label for="password1" class="control-label">Password Confirmation</label>
-            <input type="password" class="form-control" id="password1" placeholder="Enter password again">
+            <input type="password" class="form-control" id="password1" placeholder="Enter password again" required>
         </div>
         <div class="form-group">
-            <button type="submit" id="register1" class="btn btn-primary">Register</button>
-            <button type="button" id="login1" class="btn btn-primary">Login</button>
+            <button type="submit" id="register1" class="btn btn-primary">Join</button>
         </div>
     </fieldset>
 </form>
@@ -49,9 +52,6 @@
 
 <script type="text/javascript">
     $(function(){
-        $("#login1").click(function(){
-            location.href = 'login';
-        });
         $("#register1").click(function(){
             var playername = $("#playername").val();
             var playeremail = $("#playeremail").val();
