--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,3 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head lang="en">
+    <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="10">
+    <title>{{title}}</title>
+</head>
+<body>
+
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -30,7 +39,7 @@
                 <div class="broadcast-table">
                     <div class="broadcast-header">
                         <p class="broadcast-title-red">RED</p>
-                        <p class="broadcast-score">0</p>
+                        <p class="broadcast-score">{{display_red}}</p>
                     </div>
                 </div>
             </div>
@@ -41,7 +50,7 @@
                 <div class="broadcast-table">
                     <div class="broadcast-header">
                         <p class="broadcast-title-blue">BLUE</p>
-                        <p class="broadcast-score">0</p>
+                        <p class="broadcast-score">{{display_blue}}</p>
                     </div>
                 </div>
             </div>
@@ -57,6 +66,10 @@
     </div>
 
 </section>
+
+
+</body>
+</html>
 
 
 
