--- a/views/scoreboard.hbs
+++ b/views/scoreboard.hbs
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row">
             <div class="wcfplayer">
-                {{#each players}}
+
                     <div class="col-md-4 col-sm-6 col-xs-12">
                         <div class="wcfplayer-table">
                             <div class="wcfplayer-header">
@@ -41,15 +41,86 @@
                             </div>
                             <div class="wcfplayer-info">
                                 <ul>
-                                    <li><i class="fa fa-star"></i><span>1,000</span> scores</li>
-                                    <li><i class="fa fa-archive"></i>Play <span>10</span> Rounds</li>
-                                    <li><i class="fa fa-trophy"></i>Win <span>10</span> Rounds</li>
+                                    <li><i class="fa fa-star"></i><span>0</span> scores</li>
+                                    <li><i class="fa fa-archive"></i>Play <span>0</span> Rounds</li>
+                                    <li><i class="fa fa-trophy"></i>Win <span>0</span> Rounds</li>
                                     <li><i class="fa fa-times"></i>Loss <span>0</span> Rounds</li>
                                 </ul>
                             </div>
                         </div>
                     </div>
-                {{/each}}
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="wcfplayer-table">
+                            <div class="wcfplayer-header">
+                                <img class="wcfplayer-avatar u-sm-size36x36" src="images/missing_face.png"/>
+                                <p class="wcfplayer-title">Shijian</p>
+                                <p class="wcfplayer-rate">NO. 2</p>
+                            </div>
+                            <div class="wcfplayer-info">
+                                <ul>
+                                    <li><i class="fa fa-star"></i><span>0</span> scores</li>
+                                    <li><i class="fa fa-archive"></i>Play <span>0</span> Rounds</li>
+                                    <li><i class="fa fa-trophy"></i>Win <span>0</span> Rounds</li>
+                                    <li><i class="fa fa-times"></i>Loss <span>0</span> Rounds</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 col-sm-6 col-xs-12">
+                        <div class="wcfplayer-table">
+                            <div class="wcfplayer-header">
+                                <img class="wcfplayer-avatar u-sm-size36x36" src="images/missing_face.png"/>
+                                <p class="wcfplayer-title">Luther</p>
+                                <p class="wcfplayer-rate">NO. 3</p>
+                            </div>
+                            <div class="wcfplayer-info">
+                                <ul>
+                                    <li><i class="fa fa-star"></i><span>0</span> scores</li>
+                                    <li><i class="fa fa-archive"></i>Play <span>0</span> Rounds</li>
+                                    <li><i class="fa fa-trophy"></i>Win <span>0</span> Rounds</li>
+                                    <li><i class="fa fa-times"></i>Loss <span>0</span> Rounds</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="wcfplayer-table">
+                        <div class="wcfplayer-header">
+                            <img class="wcfplayer-avatar u-sm-size36x36" src="images/missing_face.png"/>
+                            <p class="wcfplayer-title">Gaochao</p>
+                            <p class="wcfplayer-rate">NO. 4</p>
+                        </div>
+                        <div class="wcfplayer-info">
+                            <ul>
+                                <li><i class="fa fa-star"></i><span>0</span> scores</li>
+                                <li><i class="fa fa-archive"></i>Play <span>0</span> Rounds</li>
+                                <li><i class="fa fa-trophy"></i>Win <span>0</span> Rounds</li>
+                                <li><i class="fa fa-times"></i>Loss <span>0</span> Rounds</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="wcfplayer-table">
+                        <div class="wcfplayer-header">
+                            <img class="wcfplayer-avatar u-sm-size36x36" src="images/missing_face.png"/>
+                            <p class="wcfplayer-title">Guest</p>
+                            <p class="wcfplayer-rate">NO. 5</p>
+                        </div>
+                        <div class="wcfplayer-info">
+                            <ul>
+                                <li><i class="fa fa-star"></i><span>0</span> scores</li>
+                                <li><i class="fa fa-archive"></i>Play <span>0</span> Rounds</li>
+                                <li><i class="fa fa-trophy"></i>Win <span>0</span> Rounds</li>
+                                <li><i class="fa fa-times"></i>Loss <span>0</span> Rounds</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
 
             </div>
         </div>
