--- a/views/index.hbs
+++ b/views/index.hbs
@@ -59,7 +59,7 @@
         <div class="row">
             <div class="col-md-12 col-sm-12 col-sm-12 col-xs-12">
                 <div class="broadcast-video">
-                    <iframe src="https://player.vimeo.com/video/148380343" width="100%" height="500px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+                    <iframe src="https://player.vimeo.com/video/37369607?color=ffffff&badge=0" width="100%" height="500px" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                 </div>
             </div>
         </div>
